<?xml version="1.0"?>
<package format="2">
  <name>tesseract_ros_examples</name>
  <version>1.0.0</version>
  <description>This package contains examples demonstrating tesseract_ros functionality.</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <license>BSD 2-Clause</license>
  <author >Levi Armstrong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>rclcpp</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_process_managers</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_rosutils</depend>
  <depend>tesseract_planning_server</depend>
  <depend>tesseract_common</depend>
  <depend>trajopt_sqp</depend>
  <depend>trajopt_ifopt</depend>
  <depend>octomap_ros</depend>
  <depend>pcl_conversions</depend>

  <exec_depend>tesseract_rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ros_testing</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
