<?xml version="1.0"?>
<package format="2">
  <name>tesseract_ros_examples</name>
  <version>0.21.1</version>
  <description>This package contains examples related to this trajopt_ros repository.</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <build_depend>ament_cmake</build_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tesseract_monitoring</depend>
  <depend>tesseract_examples</depend>
  
  <exec_depend>tesseract_rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>

  <test_depend>ros_testing</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
