<?xml version="1.0"?>
<package format="2">
  <name>tesseract_rosutils</name>
  <version>0.1.0</version>
  <description>Tesseract ROS Utilities</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <build_depend>ament_cmake</build_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>eigen</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_msgs</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_geometry</depend>
  <depend>tesseract_visualization</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_process_managers</depend>
  <depend>tesseract_srdf</depend>
  <depend>tesseract_support</depend>
  <depend>yaml-cpp</depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>ament_index_cpp</depend>

  <depend>octomap</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
