<?xml version="1.0"?>
<package format="2">
  <name>tesseract_rosutils</name>
  <version>0.21.1</version>
  <description>Tesseract ROS Utilities</description>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author>Levi Armstrong</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>ament_index_cpp</depend>
  <depend>rclcpp</depend>
  <depend>tf2_eigen</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>

  <depend>tesseract_task_composer</depend>
  
  <depend>tesseract_msgs</depend>
  
  <test_depend>tesseract_support</test_depend>
  <test_depend>std_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
